# test-github-action

./: .gitignore  LICENSE.md  README.md  mon_script.py  pyproject.toml  test-code.py  verification.py
.github/workflows/: publish.yaml  test.yaml
cyriac_benousaad_miller_rabin/: verification.py
src/miller_rabin_cyriac_benousaad/: verification.py
tests/: test_code.py
