[tool.poetry]
name = "miller_rabin_cyriac_benousaad"
version = "1.2.2"
description = "Test de miller-rabin"
authors = ["Cyriac Benousaad"]
license = "MIT"
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"