[tool.poetry]
name = "fake-git-cyriac"
version = "0.1.0"
description = "Demo malveillante éducative : faux git via entry point"
authors = ["Cyriac Benousaad"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fake_cli_demo" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
git = "fake_cli_demo.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
